--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,8 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <!-- Webpack assets -->
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <!-- end -->
   </head>
 
   <body>
@@ -19,7 +17,7 @@
         height: 100%;
       }
     </style>
-   <div class="relative block h-full">
+   <div class="relative block h-full" data-behavior="vue">
       <div class="relative flex items-center justify-center h-full">
         <div class="block login-box-container w-5/6 md:w-3/4 xl:w-1/4 ">
           <%= yield %>
